--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "start": "tsc && node dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Colman",
+  "author": "Ron Aruch | Noam Ifat",
   "license": "ISC",
   "dependencies": {
     "@types/cookie-parser": "^1.4.8",
     "@types/jsonwebtoken": "^9.0.7",
-    "cookie-parser": "^1.4.7",
     "body-parser": "^1.20.3",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
