--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "tsc && node dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Ron Aruch | Noam Ifat",
+  "author": "Colman",
   "license": "ISC",
   "dependencies": {
     "@types/cookie-parser": "^1.4.8",
