Migrate jwt pattern to class learning and adding tests

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 PORT = 3000
-DB_CONNECT_LOCAL = mongodb://localhost:27017/web_class
+ACCESS_TOKEN_SECRET=tomer
+ACCESS_TOKEN_EXPIRATION=4h
+REFRESH_TOKEN_SECRET=yoel
+REFRESH_TOKEN_EXPIRATION=3d
+DB_CONNECT_LOCAL=mongodb://localhost:27017/web_class
 DB_CONNECT = mongodb+srv://ronoam:1q2w3e4r@cluster0.7hlxm.mongodb.net/web_class?retryWrites=true&w=majority&appName=Cluster0
