fix tests to run

--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ ACCESS_TOKEN_EXPIRATION=4h
 REFRESH_TOKEN_SECRET=yoel
 REFRESH_TOKEN_EXPIRATION=3d
 DB_CONNECT_LOCAL=mongodb://localhost:27017/web_class
-DB_CONNECT = mongodb+srv://ronoam:1q2w3e4r@cluster0.7hlxm.mongodb.net/web_class?retryWrites=true&w=majority&appName=Cluster0
+DB_CONNECT = mongodb+srv://ronoam:1q2w3e4r@cluster0.7hlxm.mongodb.net/tomer_and_yoel_web_class?retryWrites=true&w=majority&appName=Cluster0
